--- a/index.html
+++ b/index.html
@@ -519,8 +519,9 @@
             <div class="container">
                 <header>
                     <h2>Contact</h2>
-                   <br>
-                   <br>
+                      <span style="color:#BAB0AE">.</span></a>
+                    <br>
+                   
                 <a class="button scrolly" href=
                 "mailto:kironroynet@gmail.com?Subject=Regarding%20your%20portfolio:">
                 <span style="color:black">email</span></a>
