--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
             <div class="container">
                 <header>
                     <h2>Contact</h2>
-                      <span style="color:#BAB0AE">.</span></a>
+                      <span style="color:#BAB0AE">000000000000</span></a>
                     <br>
                    
                 <a class="button scrolly" href=
