--- a/index.html
+++ b/index.html
@@ -519,10 +519,10 @@
             <div class="container">
                 <header>
                     <h2>Contact</h2>
-                      <p><span style="color:#BAB0AE">.</span></a><p>
-                    <br>
+                      
+                      <p><span style="color:#BAB0AE">.</span></a></p>
                    
-                <a class="button scrolly" href=
+                   <a class="button scrolly" href=
                 "mailto:kironroynet@gmail.com?Subject=Regarding%20your%20portfolio:">
                 <span style="color:black">email</span></a>
             </div>
