--- a/resume.html
+++ b/resume.html
@@ -112,7 +112,7 @@
 					<li>GitHub</li>
 					<li>HTML/CSS</li>
 					<li>JavaScript</li>
-     <li>MySQL</li>
+     <li>MySQL (basics)</li>
 					<li>Product Photography</li>
      <li>Ruby (basics)</li>
 					<li>Sketch (OS X)</li>
