--- a/biz.html
+++ b/biz.html
@@ -75,6 +75,8 @@
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://pe.newriver.com/summary.asp?cid=Vangpst&fid=922031869"><i>Vanguard Inflation-Protected Securities Fund Investor Shares (VIPSX) Prospectus </i></a>
 		<br>
 		<li><a href="https://west-a-60ols.csi-cloudapp.net/losalamitos/Login.aspx?isKiosk=False"><strong>Los Alamitos Log on</strong></a></li>
+  <br>	
+  <li><a href="https://www.ocvote.com/voting/vote-by-mail-voting/vote-by-mail-status-lookup/"><strong>Voting information</strong></a></li>
   
  
    
