--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
                 <header>
                     <h2>Contact</h2>
                       
-                      <p><span style="color:#BAB0AE">.</span></a></p>
+                      <p><span style="color:#BAB0AE"><a href="https://www.youtube.com/watch?v=6_P8RUqGQbM">_</span></a></p>
                    
                    <a class="button scrolly" href=
                 "mailto:kironroynet@gmail.com?Subject=Regarding%20your%20portfolio:">
