--- a/redwoods.html
+++ b/redwoods.html
@@ -126,7 +126,9 @@ A Natural and Cultural History</a></p></em>
             </p>
             <p><a href="https://www.youtube.com/watch?v=1B1G_Ghh2Sc">Bury Me in Redwood Country</a>
             </p>
-            <p><a href="https://www.youtube.com/watch?v=6_P8RUqGQbM">4K, Hoh Rain Forest - Nature Relaxation Video </a>
+            <p><a href="https://www.youtube.com/watch?v=PsrPTpg6mNo">4K, Redwoods National Park </a>
+            </p>
+            <p><a href="https://www.youtube.com/watch?v=6_P8RUqGQbM">4K, Hoh Rain Forest</a>
             </p>
         </div>
 
