--- a/github.html
+++ b/github.html
@@ -496,6 +496,7 @@ exit &rarr; exit
 <li><a href="http://uxdesignweekly.com/">UX Design Weekly</a></li>
 <li><a href="https://www.uxpin.com/">UX Pin</a></li>
 <li><a href="https://visualhierarchy.co/uxreads/?utm_source=vhuxreads">Visual Hierarchy</li>
+<li><a href="http://ldc.usb.ve/~vtheok/cursos/ci4325/material/Elements%20of%20User%20Experience.pdf">Elements of UX .pdf</li>
 
 </ul>
 
