--- a/rita.html
+++ b/rita.html
@@ -56,10 +56,10 @@
       <ul>
         <li><a href="https://www.medi-cal.ca.gov/Eligibility/Login.asp ">Medical</a></li>
         <li><a href="https://aerial.carecoordination.medecision.com/dsipa/physician/LoginDefault.aspx?Logout=Y">Aerial</a></li>
-        <li><a href="https://apps.availity.com/availity/web/public.elegant.login">Availity</a></li>
+        <li><a href="https://apps.availity.com/availity/web/public.elegant.login">Availity (Part of Blue Cross)</a></li>
         <li><a href="https://www.uhcwest.com/commonPortal/logouthandler">United Healthcare</a></li>
         <li><a href="https://www.healthnet.com/portal/provider/home.ndo">Healthnet</a></li>
-        <li><a href="https://www.blueshieldca.com/provider/home.sp">Healthnet</a></li>
+        <li><a href="https://www.blueshieldca.com/provider/home.sp">Blue Shield of CA</a></li>
         <li><a href="https://navinet.navimedix.com/sign-in?ReturnUrl=/">Navinet</a></li>
         <li><a href="https://mpmweb.medpointmanagement.com/2011/Default.aspx">Medpoint</a></li>
         <li><a href="https://healthid.optum.com/tb/app/index.html?TARGET=HTTPS%3A%2F%2Fwww.uhcmilitarywest.com%2Fuhcmw%2Fportal%2Fsecure%2Fprovider%2Foidredirect%2F&relyingAppId=TBP39755#/login">United Health Care 2</a></li>
@@ -72,9 +72,8 @@
         <li><a href="http://www.immunize.org/vis/ ">Immunization Action Coalition</a></li>
         <li><a href="https://external.lacare.org/oam/server/obrareq.cgi?encquery%3D2PYm7ygji8Nq9aGhg6Jvh%2B67qcxUwX6JwlIJgmiZn3vP42jzbhOIT0Y5tWwappdzru9LVBbJjJCm3Mcu2a98Id6R4i5Jbftr0yJIOcLE2yGFbWOqEIKEUS4jTfMIfveStpnpHuDRqag8CLNo6FRzFfpYYpUHgU90kjcydc4JXHLSZgGBcb%2BvRZZf%2Bzc482NI%2Fzyl0P00CBQ%2FETbq824GKAuvsuanZ1qpu0L%2BNO6Jfa1l5BJIeE5m9tbFG%2BjS4%2BUgcP1rgc3fto%2Fhru7GVVT2vWtDlM2MKX%2BrEsj5YPjp73Nj3PU0bfkpK3Z1yFeXvx6Jw3FAZeM2Mkwia3gjWqSk3FmnWBr%2BTlaEOR%2FVc%2BUl4i2L4og2Eqm3yA2uqmhqARjqxJ6gBViGUl%2BO20DoPTWYPg%3D%3D%20agentid%3DProdExt_Pinole_Pittsburg%20ver%3D1%20crmethod%3D2&ECID-Context=1.005HOKIhh_1CcpO5yj9DiW0004Qi00021d%3BkXjE">LA Care</a></li>
         <li><a href="https://eznetportal.pihhealth.org/EZ-NET60/Login.aspx">EZ net PIH</a></li>
-        <li><a href="https://www.vaccineshoppe.com/index.cfm?fa=anon.homepage">Vaccineshoppe</a></li>
         <li><a href="https://member.capphysicians.com/">Cooperative Physicans</a></li>
-        <li><a href="http://eziz.org/vfc/forms/">EZIZ</a></li>
+        
       </ul>
 	  
 	   <!-- Insurance starts -->
@@ -95,6 +94,7 @@
      
 	  <h3><a name="vaccine">Vaccine</a></h3>
       <ul>
+  <li><a href="http://eziz.org/vfc/forms/">EZIZ</a></li>
   <li><a href="https://www.vaccineshoppe.com/index.cfm?fa=anon.homepage">Vaccineshoppe (Sanofi Pasteur)</a></li>
   <li><a href="https://www.merckvaccines.com/is-bin/INTERSHOP.enfinity/WFS/Merck-MerckVaccines-Site">Merck Vaccines</a></li>
   <li><a href="https://gskvaccinesdirect.com/">GSK vaccines</a></li>
