--- a/rita.html
+++ b/rita.html
@@ -34,7 +34,7 @@
     	  
        <h3><a name="office">Office Ally</a></h3>
           <ul>
-            <li><a href="https://www.officeally.com/slogin.aspx">Practice Mate  (Office Ally)</a></li>
+            <li><a href="https://pm.officeally.com/pm/login.aspx">Practice Mate  (Office Ally)</a></li>
          
           </ul>
   
