--- a/rita.html
+++ b/rita.html
@@ -74,6 +74,7 @@
         <li><a href="https://www.medi-cal.ca.gov/Eligibility/Login.asp ">Medical</a></li>
         <li><a href="https://aerial.carecoordination.medecision.com/dsipa/physician/LoginDefault.aspx?Logout=Y">Aerial (Downey)</a></li>
         <li><a href="https://aerial.carecoordination.medecision.com/sfipa/physician/home.aspx">Aerial (St. Francis)</a></li>
+        <li><a href="https://aerial.carecoordination.medecision.com/PMG/physician/LoginDefault.aspx?Logout=Y">Aerial (Prospect)</a></li>
         <li><a href="https://apps.availity.com/availity/web/public.elegant.login">Availity (Part of Blue Cross)</a></li>
         <li><a href="https://www.uhcwest.com/commonPortal/logouthandler">United Healthcare</a></li>
         <li><a href="https://www.healthnet.com/portal/provider/home.ndo">Healthnet</a></li>
