--- a/rita.html
+++ b/rita.html
@@ -35,6 +35,7 @@
        <h3><a name="office">Office Ally</a></h3>
           <ul>
             <li><a href="https://pm.officeally.com/pm/login.aspx">Practice Mate  (Office Ally)</a></li>
+             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <li><a href="http://tv.officeally.com/pmcat/">Practice Mate Training Videos  (Office Ally)</a></li>
          
           </ul>
   
