--- a/resume.html
+++ b/resume.html
@@ -134,7 +134,7 @@
 			<div class="sectionContent">
     
     <article>
-					<h2>ABC Adult SChool</h2>
+					<h2>ABC Adult School</h2>
 					<p class="subDetails">Payroll Accounting, 2017</p>
 					<p></p>
 				</article>
