--- a/resume.html
+++ b/resume.html
@@ -80,7 +80,7 @@
 				<article>
 					<h2>Bookkeeper, Rita Roy Pediatrics</h2>
 					<p class="subDetails">October 2010 - Present (virtual)</p>
-					<p>Bookkeeping with Excel/OpenOffice. Posting payments to <em>Office Ally </em>  Payroll Accounting.</p>
+					<p>Bookkeeping with Excel/OpenOffice. Posting payments to <em>Office Ally </em>. Payroll Accounting.</p>
 				</article>
 				<article>
 					<h2>Accounting Intern at Downey Hospital</h2>
