--- a/github.html
+++ b/github.html
@@ -501,6 +501,7 @@ exit &rarr; exit
 <li><a href="https://visualhierarchy.co/uxreads/?utm_source=vhuxreads">Visual Hierarchy</li>
 <li><a href="http://ldc.usb.ve/~vtheok/cursos/ci4325/material/Elements%20of%20User%20Experience.pdf">Elements of UX .pdf</li>
 <li><a href="https://www.youtube.com/watch?v=7rAk3qTiul8">Expose UX | User Experience Web Series | S02E01 </li>
+<li><a href="https://medium.com/@danmaccarone/the-ux-of-learning-ux-is-broken-f972b27d3273#.slfsbvdeh">The UX of Learning UX is Broken</li>
 
 </ul>
 
