took out dumb info

--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
 		<div id="name">
    <br>
 			<h1 class="quickFade delayTwo"><a href="http://kironroy.github.io/">Kiron Roy</a></h1>
-			<h3 class="quickFade delayThree">&nbsp;Digital Knowledge</h3>
+			<h3 class="quickFade delayThree">&nbsp;Resume</h3>
 		</div>
 		
 		<div id="contactDetails" class="quickFade delayFour">
@@ -57,20 +57,7 @@
 	</div>
 	
 	<div id="mainArea" class="quickFade delayFive">
-		<section>
-			<article>
-				<div class="sectionTitle">
-					<h1>Interest Area</h1>
-				</div>
-				
-				<div class="sectionContent">
-    <h2>User Experience</h2>
-				</div>
-			</article>
-			<div class="clear"></div>
-		</section>
-		
-		
+
 		<section>
 			<div class="sectionTitle">
 				<h1>Work Experience</h1>
