--- a/biz.html
+++ b/biz.html
@@ -74,10 +74,12 @@
 		<br>
 				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://pe.newriver.com/summary.asp?cid=Vangpst&fid=922031869"><i>Vanguard Inflation-Protected Securities Fund Investor Shares (VIPSX) Prospectus </i></a>
 		<br>
-		<li><a href="https://west-a-60ols.csi-cloudapp.net/losalamitos/Login.aspx?isKiosk=False"><strong>Los Alamitos Log on</strong></a></li>
+		
+  <li><a href="https://west-a-60ols.csi-cloudapp.net/losalamitos/Login.aspx?isKiosk=False"><strong>Los Alamitos Log on</strong></a></li>
   <li><a href="https://www.ocvote.com/voting/vote-by-mail-voting/vote-by-mail-status-lookup/"><strong>Voting information</strong></a></li>
   <li><a href="https://www.govtrack.us/congress/votes#chamber[]=2"><strong>House of Rep. voting</strong></a></li>
   <li><a href="https://www.govtrack.us/congress/votes/compare/1/trump-nominations"><strong>Trump Cabinet</strong></a></li>
+  <li><a href="https://en.wikipedia.org/wiki/List_of_executive_actions_by_Donald_Trump"><strong>Trump Executive orders</strong></a></li>
   
  
    
