--- a/resume.html
+++ b/resume.html
@@ -66,8 +66,12 @@
 			<div class="sectionContent">
 				<article>
 					<h2>Bookkeeper, Rita Roy Pediatrics</h2>
-					<p class="subDetails">October 2010 - Present (virtual)</p>
-					<p>Bookkeeping with Excel/OpenOffice.  Posting payments to <em>Office Ally</em>. Payroll Accounting.</p>
+					<p class="subDetails">October 2010 - Present</p>
+					<p>Bookkeeping with Excel/OpenOffice. 
+      <br> 
+      <em>Billing/Posting payments to <a href="https://pm.officeally.com/pm/login.aspx">Office Ally</a></em>.  
+      <br> 
+      Payroll taxes for two employees with <a href="https://www.eftps.gov/eftps/">EFTPS</a></em>.</p>
 				</article>
 				<article>
 					<h2>Accounting Intern at Downey Hospital</h2>
