--- a/biz.html
+++ b/biz.html
@@ -80,6 +80,7 @@
   <li><a href="https://www.govtrack.us/congress/votes#chamber[]=2"><strong>House of Rep. voting</strong></a></li>
   <li><a href="https://www.govtrack.us/congress/votes/compare/1/trump-nominations"><strong>Trump Cabinet</strong></a></li>
   <li><a href="https://en.wikipedia.org/wiki/List_of_executive_actions_by_Donald_Trump"><strong>Trump Executive orders</strong></a></li>
+  <li><a href="http://coursesa.matrix.msu.edu/~hst306/documents/indust.html"><strong>Military-Industrial Complex Speech, Dwight D. Eisenhower, 1961 </strong></a></li>
   
  
    
