--- a/rita.html
+++ b/rita.html
@@ -226,8 +226,14 @@
 
 
     <ul>
+      <li>s
+        <a href="https://www.ftb.ca.gov/businesses/">CA Franchise board</a>
+      <li>
       <li>
         <a href="https://www.eftps.gov/eftps/">EFTPS</a>
+      <li>
+        <a href="https://www.irs.gov/">IRS</a>
+       </li>
       </li>
     </ul>
 
