--- a/rita.html
+++ b/rita.html
@@ -48,9 +48,11 @@
     <!-- ICD 10 ends -->
 
 
-    <div id="underbar">
-      <a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    </div>
+  <div id="underbar">
+    <a href="#office">Office Ally</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#icd">ICD 10</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  </div>
+
+  
     <!-- ICD 10 starts -->
 
 
@@ -66,9 +68,11 @@
     <!-- ICD 10 ends -->
 
 
-    <div id="underbar">
-      <a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    </div>
+ <div id="underbar">
+   <a href="#office">Office Ally</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#icd">ICD 10</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+ </div>
+
+ 
     <!-- Insurance starts -->
 
 
@@ -174,9 +178,11 @@
     <!-- Insurance starts -->
 
 
-    <div id="underbar">
-      <a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    </div>
+  <div id="underbar">
+    <a href="#office">Office Ally</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#icd">ICD 10</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+  </div>
+
+  
     <!-- Vaccine starts -->
 
 
@@ -213,7 +219,7 @@
 
 
     <div id="underbar">
-      <a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="#office">Office Ally</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#icd">ICD 10</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </div>
 
 
@@ -236,8 +242,10 @@
 
 
     <div id="underbar">
-      <a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="#office">Office Ally</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#icd">ICD 10</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </div>
+
+
     <!--help ends-->
   </div>
 </body>
