--- a/rita.html
+++ b/rita.html
@@ -22,7 +22,7 @@
 
   <div class="right1">
     <div class="navtop">
-      <a id="top" name="top"></a> Rita Roy M.D. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#office">Office Ally</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#icd">ICD 10</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a id="top" name="top"></a> <a href="https://www.google.com/search?q=rita++roy+m.d&ie=utf-8&oe=utf-8">Rita Roy M.D.</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#office">Office Ally</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#icd">ICD 10</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </div>
   </div>
   <br>
