--- a/biz.html
+++ b/biz.html
@@ -346,7 +346,10 @@
 	  		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.google.com/maps/place/8570+La+Salle+St/@33.8378698,-118.0473668,150m/data=!3m1!1e3!4m3!3m2!1s0x80dd2c235dafbc6b:0x80fa6238b829bc93!4b1">Google Map of Cypress</a>
 		
 	  		<br> 
-	  		<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Managed by: <a href="http://orangecountypropertymanagement.com/">Orange County Management</a></li>
+	  	<strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Managed by: <a href="http://orangecountypropertymanagement.com/">Orange County Management</a></li></strong>
+    <strong> <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Insurance: <a href="https://www.statefarm.com/">State Farm </a></li></strong>
+    <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Agent: Emma Hightower Phone: (714) - 637 - 5900
+    
 		
 	  	    <p>	<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Orange County Property Management Inc.</b>
 	  			<br>
