--- a/resume.html
+++ b/resume.html
@@ -125,7 +125,7 @@
 			<div class="sectionContent">
     
     <article>
-					<h2>CSUF Extenstion  </h2>
+					<h2>CSUF Extension </h2>
 					<p class="subDetails">Certificate in Geographic Information Systems, 2014</p>
 					<p></p>
 				</article>
