--- a/biz.html
+++ b/biz.html
@@ -77,6 +77,7 @@
 		
   <li><a href="https://west-a-60ols.csi-cloudapp.net/losalamitos/Login.aspx?isKiosk=False"><strong>Los Alamitos Log on</strong></a></li>
   <li><a href="https://www.ocvote.com/voting/vote-by-mail-voting/vote-by-mail-status-lookup/"><strong>Voting information</strong></a></li>
+  <li><a href="http://www.ipl.org/div/potus//"><strong>POTUS info</strong></a></li>
   <li><a href="https://www.govtrack.us/congress/votes#chamber[]=2"><strong>House of Rep. voting</strong></a></li>
   <li><a href="https://www.govtrack.us/congress/votes/compare/1/trump-nominations"><strong>Trump Cabinet</strong></a></li>
   <li><a href="https://en.wikipedia.org/wiki/List_of_executive_actions_by_Donald_Trump"><strong>Trump Executive orders</strong></a></li>
