--- a/github.html
+++ b/github.html
@@ -425,6 +425,7 @@ exit &rarr; exit
 <h3><a name="ruby">&nbsp;Ruby</a></h3>
 
 <ul>
+<li><a href="https://launchschool.com/books">Open Bookshelf</a></li>
 <li><a href="https://repl.it/Fjbg/24">Dream Team 92</a></li>
 <li><a href="https://repl.it/F72N/22">Payroll Calculator</a></li>
 <li><a href="https://repl.it/F7nG/8">Payroll Calculator 2</a></li>
