--- a/resume.html
+++ b/resume.html
@@ -72,6 +72,8 @@
       <em>Billing/Posting payments to <a href="https://pm.officeally.com/pm/login.aspx">Office Ally</a></em>.  
       <br> 
       Payroll taxes for two employees with <a href="https://www.eftps.gov/eftps/">EFTPS</a></em>.</p>
+      <br>
+      Billing Information <a href="https://repl.it/FlPz/61">ruby_program</a></em>.</p>
 				</article>
 				<article>
 					<h2>Accounting Intern at Downey Hospital</h2>
