--- a/resume.html
+++ b/resume.html
@@ -70,10 +70,10 @@
 					<p>Bookkeeping with Excel/OpenOffice. 
       <br> 
       <em>Billing/Posting payments to <a href="https://pm.officeally.com/pm/login.aspx">Office Ally</a></em>.  
-      <br> 
-      Payroll taxes for two employees with <a href="https://www.eftps.gov/eftps/">EFTPS</a></em>.</p>
       <br>
-      Billing Information <a href="https://repl.it/FlPz/61">ruby_program</a></em>.</p>
+      Payroll taxes for two employees with <a href="https://www.eftps.gov/eftps/">EFTPS</a></em>.
+      <br>
+      Billing Information <a href="https://repl.it/FlPz/61">made in ruby programming language</a></em>.</p>
 				</article>
 				<article>
 					<h2>Accounting Intern at Downey Hospital</h2>
