style ruby files

--- a/github.html
+++ b/github.html
@@ -49,7 +49,7 @@
 <div class="right1">
 		<div class="navtop">
 				<a name="top"></a>
-			 <a href="#github">&nbsp;GitHub</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			  <a href="#github">&nbsp;GitHub</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="#google">&nbsp;Google</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="#javascript">&nbsp;JavaScript</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					<a href="#terminal">&nbsp;Terminal</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -182,7 +182,7 @@
 <h3><a name="terminal">&nbsp;Terminal</a></h3>
 <ul>
 <br>
-<br>
+
 <b>&nbsp;&nbsp;Terminal for Mac </b>
 <br>
 <br>
@@ -259,6 +259,9 @@
 <br>
 <br>
 &nbsp;&nbsp;rm -r ~/Library/Messages/chat.* = Delete iMessages archive
+<br>
+<br>
+&nbsp;&nbsp;~/Library/Caches = clean caches
 <br>
 <br>
 &nbsp;<a href="https://www.youtube.com/watch?v=a2T-t1_3LS4"> <span style="color:yellow">Automator rename files</span></a>
@@ -423,7 +426,6 @@ exit &rarr; exit
 
 
 <h3><a name="ruby">&nbsp;Ruby</a></h3>
-
 <ul>
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/Fjbg/24">dream_team_92.rb</a></span></li>
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/F72N/22">payroll_calculator_commission.rb</a></span></li>
