--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
 		<div id="name">
    <br>
 			<h1 class="quickFade delayTwo"><a href="http://kironroy.github.io/">Kiron Roy</a></h1>
-			<h3 class="quickFade delayThree">&nbsp;Resume</h3>
+			<h3 class="quickFade delayThree">&nbsp;Résumé</h3>
 		</div>
 		
 		<div id="contactDetails" class="quickFade delayFour">
