--- a/github.html
+++ b/github.html
@@ -430,6 +430,7 @@ exit &rarr; exit
 
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/FuMo/10">KironFiles.rb</a></span></li>
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/FpbG/46">kironroy_dir_files_sort.rb</a></span></li>
+<li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/Fu7J/32">eureka_vegas.rb</a></span></li>
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/Fjbg/44">dream_team_92.rb</a></span></li>
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/F72N/22">payroll_calculator_commission.rb</a></span></li>
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/F7nG/8">payroll_calculator_products.rb</a></span></li>
