--- a/github.html
+++ b/github.html
@@ -430,7 +430,7 @@ exit &rarr; exit
 
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/FuMo/10">KironFiles.rb</a></span></li>
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/FpbG/46">kironroy_dir_files_sort.rb</a></span></li>
-<li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/Fu7J/32">eureka_vegas.rb</a></span></li>
+<li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/Fu7J/36">eureka_vegas.rb</a></span></li>
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/Fjbg/44">dream_team_92.rb</a></span></li>
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/F72N/22">payroll_calculator_commission.rb</a></span></li>
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/F7nG/8">payroll_calculator_products.rb</a></span></li>
@@ -569,6 +569,7 @@ exit &rarr; exit
 <li><a href="https://www.youtube.com/watch?v=Yxbgm9Bmkzw"> <i>1989 British Airways Commerical</i> </a> </li>
 <li><a href="https://www.youtube.com/watch?v=-DO2X0e-yUc"> <i>1993 British Airways Commerical </i> </a> </li>
 <li><a href="https://www.youtube.com/watch?v=YofR8xbvS3k"> <i>Sonic the Hedgehog music </i> </a> </li>
+<li><a href="http://www.monochromart.com/index.html"> <i>Todd Carpenter</i> </a> </li>
 </ul>
 
 </ul>
