--- a/github.html
+++ b/github.html
@@ -459,6 +459,7 @@ exit &rarr; exit
 <li><a href="https://www.codeschool.com/">Code School: Ruby</a></li>
 <li><a href="https://www.codecademy.com/learn">Codecademy</a></li>
 <li><a href="https://www.youtube.com/watch?v=1D3_ivHhKXI">Ruby on Rails YouTube</a></li>
+<strong><li><a href="http://railsapps.github.io/what-is-ruby-rails.html">What is Ruby on Rails </a></li></strong>
 <li><a href="https://www.youtube.com/watch?v=4nyzl3pVXp4">Ruby Intro DevFactor</a></li>
 <li><a href="http://localhost:3000/">local host</a></li>
 <li><a href="https://c9.io/">Cloud 9</a></li>
