--- a/github.html
+++ b/github.html
@@ -431,6 +431,7 @@ exit &rarr; exit
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/FuMo/10">KironFiles.rb</a></span></li>
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/FpbG/46">kironroy_dir_files_sort.rb</a></span></li>
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/Fu7J/36">eureka_vegas.rb</a></span></li>
+<li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/FxIF/18">classSong.rb</a></span></li>
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/Fjbg/44">dream_team_92.rb</a></span></li>
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/F72N/22">payroll_calculator_commission.rb</a></span></li>
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/F7nG/8">payroll_calculator_products.rb</a></span></li>
@@ -459,7 +460,7 @@ exit &rarr; exit
 <li><a href="https://www.codeschool.com/">Code School: Ruby</a></li>
 <li><a href="https://www.codecademy.com/learn">Codecademy</a></li>
 <li><a href="https://www.youtube.com/watch?v=1D3_ivHhKXI">Ruby on Rails YouTube</a></li>
-<strong><li><a href="http://railsapps.github.io/what-is-ruby-rails.html">What is Ruby on Rails </a></li></strong>
+<strong><li><a href="http://railsapps.github.io/what-is-ruby-rails.html">What is Ruby on Rails?</a></li></strong>
 <li><a href="https://www.youtube.com/watch?v=4nyzl3pVXp4">Ruby Intro DevFactor</a></li>
 <li><a href="http://localhost:3000/">local host</a></li>
 <li><a href="https://c9.io/">Cloud 9</a></li>
