--- a/github.html
+++ b/github.html
@@ -107,6 +107,7 @@
 <ul>
 
 <li><a href="https://www.codecademy.com/">Codecademy</a></li>
+<strong><li><a href="https://javascript30.com/account/signin">Wes Boss 30 days of JavaScript: Sign In</a></li></strong>
 <li><a href="http://www.w3schools.com/howto/">W3 how to</a></li>
 <li><a href="https://repl.it/languages">Repl.it (all languages)</a></li>
 <li><a href="https://www.youtube.com/watch?v=Ukg_U3CnJWI">Learn JavaScript in 12 Minutes (Basics)</a> </li>
@@ -433,7 +434,7 @@ exit &rarr; exit
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/Fu7J/36">eureka_vegas.rb</a></span></li>
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/FxIF/18">classSong.rb</a></span></li>
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/Fjbg/44">dream_team_92.rb</a></span></li>
-<li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/FxNq/59">DreamTeamClass.rb</a></span></li>
+<li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/FxNq/108">DreamTeamClass.rb</a></span></li>
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/F72N/22">payroll_calculator_commission.rb</a></span></li>
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/F7nG/8">payroll_calculator_products.rb</a></span></li>
 <li><span style="font-family: 'Roboto Mono';"><a href="https://repl.it/F9YL/17">payroll_calculator_bonus.rb</a></span></li>
