color changes crest

--- a/redwoods2.html
+++ b/redwoods2.html
@@ -4,7 +4,7 @@
 <head>
     <title>Redwoods: Sequoia sempervirens</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="redwoods.css">
+    <link rel="stylesheet" href="redwoods2.css">
     <link href='https://fonts.googleapis.com/css?family=Heebo:400,300' rel='stylesheet' type='text/css'>
     <script src="js/konami.js"></script>
 
@@ -36,7 +36,7 @@
     <div class="w3-container w3-orange">
         <br>
         <center>
-            <a href="http://kironroy.github.io"> <img src="logo2.svg" alt="Kiron Roy Logo" style="width:90px;height:90px;">
+            <a href="http://kironroy.github.io"> <img src="crest2.svg" alt="Kiron Roy Logo" style="width:400px;height:400px;">
             </a>
         </center>
         <h1>Redwoods: <em>Sequoia sempervirens</em></h1>
