--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link href=
     "https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
     rel="stylesheet">
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<!--<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">-->
+	<!--><link rel="icon" href="/favicon.ico" type="image/x-icon">-->
     <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 
     <script src="js/jquery.min.js">
