icon for iphone

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 	<!-- For first- and second-generation iPad: -->
 
 	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
+ 
+ <!-- For iPhone: -->
+ 
+ <link rel="apple-touch-icon" href="apple-touch-icon-iphone.png" />
 
 	<!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
 
