--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 	
 	<!-- For Safari Browser: -->
 	<link rel="icon" sizes="192x192" href="apple-touch-icon-192x192-precomposed.png">
+ 
+	<!-- For Safari Browser on iPhone: -->
+	<link rel="icon" sizes="192x192" href="apple-touch-icon-180x180-precomposed.png">
 	
 	<!-- For third-generation iPad with high-resolution Retina display: -->
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144-precomposed.png">
