--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <link href="css/style-wide.css" rel="stylesheet"></noscript>
 	
 	<!-- For Safari Browser: -->
-	<link rel="icon" sizes="192x192" href="apple-touch-icon-192x192-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="192x192" href="apple-touch-icon-192x192-precomposed.png">
  
 	<!-- For Safari Browser on iPhone: -->
-	<link rel="icon" sizes="192x192" href="apple-touch-icon-180x180-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="180x180" href="apple-touch-icon-180x180-precomposed.png">
 	
 	<!-- For third-generation iPad with high-resolution Retina display: -->
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144-precomposed.png">
@@ -55,8 +55,7 @@
 
 	<!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
 
-	<link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
-    <!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]--><!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+	<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]--><!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 </head>
 <body>
 
