--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,10 @@
 <link href='https://fonts.googleapis.com/css?family=Heebo:400,300' rel='stylesheet' type='text/css'>
 
 	<!-- For Safari Browser: -->
-	<link rel="icon" sizes="192x192" href="apple-touch-icon-192x192-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="192x192" href="apple-touch-icon-192x192-precomposed.png">
+ 
+	<!-- For Safari Browser on iPhone: -->
+	<link rel="apple-touch-icon-precomposed" sizes="180x180" href="apple-touch-icon-180x180-precomposed.png">
 	
 	<!-- For third-generation iPad with high-resolution Retina display: -->
 	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144-precomposed.png">
