--- a/biz.html
+++ b/biz.html
@@ -381,7 +381,7 @@
 		
 
 	  		<br> 
-	  		<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Managed by: <a href="http://www.property-mgmt.com/csp/atlas/FrontEnd/index.csp?l=983">Atlas Group LC</a></li>
+	  		<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Managed by: <a href="https://www.property-mgmt.com/">Atlas Group LC</a></li>
 		
 	  		<br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://atlasgrouplc.appfolio.com/oportal/users/log_in"><b>Owner's Portal Atlas Group LC</b></a></li>
 		
