--- a/resume.html
+++ b/resume.html
@@ -33,8 +33,7 @@
 
 	<!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
 
-	<link rel="apple-touch-icon-precomposed" href="apple-touch- icon-precomposed.png">
-    <!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]--><!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+ <!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]--><!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -56,7 +55,8 @@
 		<div id="contactDetails" class="quickFade delayFour">
 			<ul>
 				<li>email: &nbsp;  <a href="mailto:kironroynet@gmail.com?Subject=Regarding your portfolio:" target="_blank">kironroynet@gmail.com</a></li>
-				<li>website: &nbsp;  <a href="http://kironroy.github.io/">portfolio</a></li>
+				<li>github: &nbsp;  <a href="https://github.com/kironroy">kironroy repositories</a></li>
+    <li>website: &nbsp; <a href="http://kironroy.github.io/">portfolio</a></li>
 				<li></li>
 			</ul>
 		</div>
