--- a/resume.html
+++ b/resume.html
@@ -113,10 +113,10 @@
 					<li>Excel/OpenOffice</li>
 					<li>GitHub</li>
 					<li>HTML/CSS</li>
-					<li>JavaScript</li>
+					<li>JavaScript (basics)</li>
      <li>MySQL (basics)</li>
 					<li>Product Photography</li>
-     <li>Ruby (basics)</li>
+     <li>Ruby</li>
 					<li>Sketch (OS X)</li>
 					<li>Terminal (OS X)</li>
 					<li>Web Maps</li>
