--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html>
+<?xml version="1.0" encoding="utf-8"?>
 <html>
 <head>
  <title>Kiron Roy</title>
@@ -32,26 +32,25 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style-wide.css" rel="stylesheet"></noscript>
 	
-	<!-- For Safari Browser: -->
-	<link rel="apple-touch-icon-precomposed" sizes="192x192" href="apple-touch-icon-192x192-precomposed.png">
- 
-	<!-- For Safari Browser on iPhone: -->
-	<link rel="apple-touch-icon-precomposed" sizes="180x180" href="apple-touch-icon-180x180-precomposed.png">
-	
-	<!-- For third-generation iPad with high-resolution Retina display: -->
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144-precomposed.png">
+     <!-- For Safari Browser: -->
+     <link rel="icon" sizes="192x192" href="apple-touch-icon-192x192-precomposed.png">
 
-	<!-- For iPhone with high-resolution Retina display: -->
+     <!-- For third-generation iPad with high-resolution Retina display: -->
+     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144-precomposed.png">
 
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png">
+     <!-- For iPhone with high-resolution Retina display: -->
 
-	<!-- For first- and second-generation iPad: -->
+     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png">
 
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
- 
- <!-- For iPhone: -->
- 
- <link rel="apple-touch-icon" href="apple-touch-icon-iphone.png" />
+     <!-- For first- and second-generation iPad: -->
+
+     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
+
+     <!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+
+     <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
+     <!--[ if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+     <!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 
 	<!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
 
