--- a/github.html
+++ b/github.html
@@ -220,6 +220,9 @@
 &nbsp;&nbsp;cp = copy file e.g. cp essay.txt essayv2.txt
 <br>
 <br>
+&nbsp;&nbsp;cp -r projects kironroy copy directories
+<br>
+<br>
 &nbsp;&nbsp;mv = rename file e.g. mv essay.txt article.txt
 <br>
 <br>
