tree and fixed col

--- a/github.html
+++ b/github.html
@@ -5,7 +5,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Heebo:400,300' rel='stylesheet' type='text/css'>
     <link href="style_github.css" rel="stylesheet" type="text/css" />
     <title>GitHub</title>
@@ -93,7 +93,7 @@
 <a href="#terminal">&nbsp;Terminal</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#python">&nbsp;Python</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#ruby">&nbsp;Ruby</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="#ux">&nbsp;UX</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a href="#ux">&nbsp;UX</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#web">&nbsp;Web</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </h4>
       </div>
 
@@ -126,7 +126,7 @@
 <a href="#terminal">&nbsp;Terminal</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#python">&nbsp;Python</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#ruby">&nbsp;Ruby</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="#ux">&nbsp;UX</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a href="#ux">&nbsp;UX</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#web">&nbsp;Web</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </h4>
       </div>
 
@@ -170,7 +170,7 @@
 <a href="#terminal">&nbsp;Terminal</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#python">&nbsp;Python</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#ruby">&nbsp;Ruby</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="#ux">&nbsp;UX</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a href="#ux">&nbsp;UX</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#web">&nbsp;Web</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </h4>
       </div>
 
@@ -221,6 +221,9 @@
 <br>
 <br>
 &nbsp;&nbsp;cp -r projects kironroy copy directories
+<br>
+<br>
+&nbsp;&nbsp;tree see your directory and files with branches
 <br>
 <br>
 &nbsp;&nbsp;mv = rename file e.g. mv essay.txt article.txt
@@ -354,7 +357,7 @@ git branch -d branch_name: Deletes the branch specified.
 Test site &rarr; <a href="https://www.tutorialspoint.com/execute_sql_online.php">test SQL syntax</a>
 <br>
 <br>
-Access mysql &rarr; /usr/local/mysql/bin/mysql -u root -p 
+Access mysql &rarr; /usr/local/mysql/bin/mysql -u root -p
 <br>
 <br>
 exit &rarr; exit
@@ -375,7 +378,7 @@ exit &rarr; exit
 <a href="#terminal">&nbsp;Terminal</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#python">&nbsp;Python</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#ruby">&nbsp;Ruby</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="#ux">&nbsp;UX</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a href="#ux">&nbsp;UX</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#web">&nbsp;Web</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </h4>
       </div>
 
@@ -420,7 +423,7 @@ exit &rarr; exit
 <a href="#terminal">&nbsp;Terminal</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#python">&nbsp;Python</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#ruby">&nbsp;Ruby</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="#ux">&nbsp;UX</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a href="#ux">&nbsp;UX</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#web">&nbsp;Web</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </h4>
       </div>
 
@@ -508,10 +511,10 @@ exit &rarr; exit
 <a href="#terminal">&nbsp;Terminal</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#python">&nbsp;Python</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#ruby">&nbsp;Ruby</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="#ux">&nbsp;UX</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a href="#ux">&nbsp;UX</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#web">&nbsp;Web</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </h4>
       </div>
-      
+
 <h3><a name="ux">&nbsp;UX</a></h3>
 
 <ul>
@@ -536,7 +539,7 @@ exit &rarr; exit
 <a href="#terminal">&nbsp;Terminal</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#python">&nbsp;Python</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#ruby">&nbsp;Ruby</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="#ux">&nbsp;UX</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a href="#ux">&nbsp;UX</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#web">&nbsp;Web</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </h4>
       </div>
 
@@ -590,7 +593,7 @@ exit &rarr; exit
 <a href="#terminal">&nbsp;Terminal</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#python">&nbsp;Python</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#ruby">&nbsp;Ruby</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a href="#ux">&nbsp;UX</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+<a href="#ux">&nbsp;UX</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <a href="#web">&nbsp;Web</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </h4>
       </div>
 
