--- a/resume.html
+++ b/resume.html
@@ -119,6 +119,7 @@
      <li>Ruby</li>
 					<li>Sketch (OS X)</li>
 					<li>Terminal (OS X)</li>
+     <li>QGIS</li>
 					<li>Web Maps</li>
 				</ul>
 			</div>
