--- a/github.html
+++ b/github.html
@@ -554,6 +554,7 @@ exit &rarr; exit
 <li><a href="https://www.codecademy.com/">Codecademy</a></li>
 <li><a href="https://www.arcgis.com/home/signin.html?returnUrl=https%3A%2F%2Fwww.arcgis.com%2Fhome%2Fcontent.html">ArcGis MyContent</a></li>
 <li><a href="http://earthexplorer.usgs.gov/">USGS maps</a></li>
+<li><a href="http://www.qgistutorials.com/en/index.html">QGIS tutorials</a></li>
 <li><a href="https://webmaker.org/#/?_k=d32thv">Mozilla Webmaker</a></li>
 <li><a href="http://www.w3schools.com/howto/">W3 how to</a></li>
 <li><a href="https://thegrid.io/">The Grid, AI automatically making websites</a></li>
