--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </li>
                 <li>
                     <a class="icon fa fa-tachometer" href=
-                    "http://kironroy.github.io/github"><span class="label">Git
+                    "https://github.com/kironroy/kironroy.github.io/wiki/GitHub-Guide"><span class="label">Git
                     Help</span></a>
                 </li>
                 <li>
