--- a/resume.html
+++ b/resume.html
@@ -117,8 +117,8 @@
      <li>MySQL (basics)</li>
 					<li>Product Photography</li>
      <li>Ruby</li>
-					<li>Sketch (OS X)</li>
-					<li>Terminal (OS X)</li>
+					<li>Sketch (macOS)</li>
+					<li>Terminal (macOS)</li>
 					<li>Windows PowerShell</li>
      <li>QGIS</li>
 					<li>Web Maps</li>
