--- a/rita.html
+++ b/rita.html
@@ -192,7 +192,7 @@
 
     <ul>
       <li>
-        <a href="http://eziz.org/vfc/forms/">EZIZ</a>
+        <a href="http://eziz.org/myvfcvaccines/">EZIZ</a>
       </li>
 
 
