--- a/rita.html
+++ b/rita.html
@@ -22,7 +22,7 @@
 
   <div class="right1">
     <div class="navtop">
-      <a id="top" name="top"></a> <a href="https://www.google.com/search?q=rita++roy+m.d&ie=utf-8&oe=utf-8">Rita Roy M.D.</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#office">Office Ally</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#icd">ICD 10</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a id="top" name="top"></a> <a href="https://www.google.com/search?q=rita++roy+m.d&ie=utf-8&oe=utf-8">Rita Roy M.D.</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#office">Office Ally</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#resources">Resources</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </div>
   </div>
   <br>
@@ -56,13 +56,19 @@
     <!-- ICD 10 starts -->
 
 
-    <h3><a id="icd" name="icd">ICD 10</a>
+    <h3><a id="resources" name="icd">Resources</a>
     </h3>
 
 
     <ul>
       <li>
         <a href="http://www.nuemd.com/icd-10/codes/shortness%20of%20breath">ICD 10 lookup</a>
+      </li>
+      <li>
+        <a href="http://publichealth.lacounty.gov/cms/CHDP.htm">CHDP Provider Resources</a>
+      </li>
+      <li>
+        <a href="http://www.dhcs.ca.gov/services/chdp/Pages/default.aspx">Child Health and Disability Prevention Program CA.gov</a>
       </li>
     </ul>
     <!-- ICD 10 ends -->
