--- a/rita.html
+++ b/rita.html
@@ -22,7 +22,7 @@
 
   <div class="right1">
     <div class="navtop">
-      <a id="top" name="top"></a> <a href="https://www.google.com/search?q=rita++roy+m.d&ie=utf-8&oe=utf-8">Rita Roy M.D.</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#office">Office Ally</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#resources">Resources</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a id="top" name="top"></a> <a href="https://www.google.com/search?q=rita++roy+m.d&ie=utf-8&oe=utf-8">Rita Roy M.D.</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#office">Office Ally</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#Resources">Resources</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </div>
   </div>
   <br>
@@ -45,24 +45,24 @@
         <a href="http://tv.officeally.com/pmcat/">Practice Mate Training Videos (Office Ally)</a>
       </li>
     </ul>
-    <!-- ICD 10 ends -->
+    <!-- Resources ends -->
 
 
   <div id="underbar">
-    <a href="#office">Office Ally</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#icd">ICD 10</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="#office">Office Ally</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#Resources">Resources</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   </div>
 
   
-    <!-- ICD 10 starts -->
+    <!-- Resources starts -->
 
 
-    <h3><a id="resources" name="icd">Resources</a>
+    <h3><a id="Resources" name="Resources">Resources</a>
     </h3>
 
 
     <ul>
       <li>
-        <a href="http://www.nuemd.com/icd-10/codes/shortness%20of%20breath">ICD 10 lookup</a>
+        <a href="http://www.nuemd.com/Resources-10/codes/shortness%20of%20breath">Resources lookup</a>
       </li>
       <li>
         <a href="http://publichealth.lacounty.gov/cms/CHDP.htm">CHDP Provider Resources</a>
@@ -71,11 +71,11 @@
         <a href="http://www.dhcs.ca.gov/services/chdp/Pages/default.aspx">Child Health and Disability Prevention Program CA.gov</a>
       </li>
     </ul>
-    <!-- ICD 10 ends -->
+    <!-- Resources ends -->
 
 
  <div id="underbar">
-   <a href="#office">Office Ally</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#icd">ICD 10</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+   <a href="#office">Office Ally</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#Resources">Resources</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
  </div>
 
  
@@ -185,7 +185,7 @@
 
 
   <div id="underbar">
-    <a href="#office">Office Ally</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#icd">ICD 10</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="#office">Office Ally</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#Resources">Resources</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   </div>
 
   
@@ -225,7 +225,7 @@
 
 
     <div id="underbar">
-      <a href="#office">Office Ally</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#icd">ICD 10</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="#office">Office Ally</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#Resources">Resources</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </div>
 
 
@@ -248,7 +248,7 @@
 
 
     <div id="underbar">
-      <a href="#office">Office Ally</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#icd">ICD 10</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="#office">Office Ally</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#Resources">Resources</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#insurance">Insurance</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#vaccine">Vaccine</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="#taxes">Taxes</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </div>
 
 
