--- a/rita.html
+++ b/rita.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <link href="biz.css" rel="stylesheet" type="text/css">
+  <link href="style_rita.css" rel="stylesheet" type="text/css">
 
   <title>Rita Roy M.D.</title>
   <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
@@ -87,23 +87,24 @@
 
 
     <ul>
+     
+
+      <li>
+       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://aerial.carecoordination.medecision.com/dsipa/physician/LoginDefault.aspx?Logout=Y">Aerial (Downey)</a>
+      </li>
+
+
+      <li>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://aerial.carecoordination.medecision.com/sfipa/physician/home.aspx">Aerial (St. Francis)</a>
+      </li>
+
+
+      <li>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://aerial.carecoordination.medecision.com/PMG/physician/LoginDefault.aspx?Logout=Y">Aerial (Prospect)</a>
+      </li>
+      
       <li>
         <a href="https://www.medi-cal.ca.gov/Eligibility/Login.asp">Medical</a>
-      </li>
-
-
-      <li>
-        <a href="https://aerial.carecoordination.medecision.com/dsipa/physician/LoginDefault.aspx?Logout=Y">Aerial (Downey)</a>
-      </li>
-
-
-      <li>
-        <a href="https://aerial.carecoordination.medecision.com/sfipa/physician/home.aspx">Aerial (St. Francis)</a>
-      </li>
-
-
-      <li>
-        <a href="https://aerial.carecoordination.medecision.com/PMG/physician/LoginDefault.aspx?Logout=Y">Aerial (Prospect)</a>
       </li>
 
 
