aerial one link

--- a/rita.html
+++ b/rita.html
@@ -90,19 +90,9 @@
      
 
       <li>
-       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://aerial.carecoordination.medecision.com/dsipa/physician/LoginDefault.aspx?Logout=Y">Aerial (Downey)</a>
+       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://aerial.carecoordination.medecision.com/dsipa/physician/LoginDefault.aspx?Logout=Y">Aerial (Downey, Prospect, St. Francis)</a>
       </li>
 
-
-      <li>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://aerial.carecoordination.medecision.com/sfipa/physician/home.aspx">Aerial (St. Francis)</a>
-      </li>
-
-
-      <li>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://aerial.carecoordination.medecision.com/PMG/physician/LoginDefault.aspx?Logout=Y">Aerial (Prospect)</a>
-      </li>
-      
       <li>
         <a href="https://www.medi-cal.ca.gov/Eligibility/Login.asp">Medical</a>
       </li>
