aerial one link

--- a/rita.html
+++ b/rita.html
@@ -90,7 +90,7 @@
      
 
       <li>
-       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://aerial.carecoordination.medecision.com/dsipa/physician/LoginDefault.aspx?Logout=Y">Aerial (Downey, Prospect, St. Francis)</a>
+       <a href="https://aerial.carecoordination.medecision.com/dsipa/physician/LoginDefault.aspx?Logout=Y">Aerial (Downey, Prospect, St. Francis)</a>
       </li>
 
       <li>
