aerial one link

--- a/rita.html
+++ b/rita.html
@@ -104,7 +104,7 @@
 
 
       <li>
-        <a href="https://www.uhcwest.com/commonPortal/logouthandler">United Healthcare</a>
+        <a href="https://www.uhcwest.com/commonPortal/index.jsp">United Healthcare</a>
       </li>
 
 
